# vizzy

./: .gitignore  .gitmodules  README.md
vizzy_behaviour/: CMakeLists.txt  package.xml
vizzy_behaviour/scripts/: exercise_promoter.py  exercise_promoter_simple.py  exercise_promoter_simple_pt.py  exercise_promoter_simple_pyglet_en.py  exercise_promoter_simple_pyglet_pt.py  exercise_pt.py  gaze_controller.py  hand_shaker.py  openpose_handshake.py  robot_wandered.py  robot_wandered.py_backup  robot_wandered_CIENCIA.py
vizzy_calibration/: CMakeLists.txt  package.xml
vizzy_calibration/launch/: ar_track_alvar.launch  arm_camera_calibration.launch
vizzy_calibration/src/: IndividualMarkersNoKinect.cpp  arm_camera_calibration.cpp
vizzy_control/: CMakeLists.txt  README.md  package.xml  vizzy_control_nodelets.xml
vizzy_control/action/: Gaze.action
vizzy_control/config/: frames.yaml  vizzy_control.yaml  vizzy_control_hand.yaml
vizzy_control/launch/: gaze.launch  two_arms_cartesian_action_server.launch  two_arms_trajectory_action_server.launch  vizzy_control.launch
vizzy_control/param/: left_arm_follow_traj.yaml  right_arm_follow_traj.yaml
vizzy_control/script/: CartesianClient.py  EndEffectorPose.py  VizzyArmYarp.sh  emotions.py  emotions_less_move.py  emotions_more_move.py
vizzy_control/src/: BallFollowerRos.cpp  BallFollowerRos.h  FixationPoint.cpp  FixationPoint.h  FixationPointRos.cpp  FixationPointRos.h  Gaze.cpp  Gaze.h  GazeClient.cpp  GazeClient.h  GazeClientWASD.cpp  GazeClientWASD.hpp  GazeReal.cpp  GazeRealRos.cpp  GazeRealRos.h  GazeRealRosNode.cpp  GazeSimulation.cpp  GazeSimulation.h  GazeSimulationRos.cpp  GazeSimulationRosNode.cpp  VizzyCartActionServerNode.cpp  VizzyCartesianActionServer.cpp  VizzyCartesianActionServer.h  VizzyLeftArmTrajActionServerNode.cpp  VizzyLeftArmTrajectoryActionServer.cpp  VizzyLeftArmTrajectoryActionServer.h  VizzyRightArmTrajActionServerNode.cpp  VizzyRightArmTrajectoryActionServer.cpp  VizzyRightArmTrajectoryActionServer.h  VizzyTrajActionServerNode.cpp  VizzyTrajectoryActionServer.cpp  VizzyTrajectoryActionServer.h  mydemoTest.py
vizzy_description/: CMakeLists.txt  frames.gv  package.xml  urdf.rviz
vizzy_description/kinematicDescriptionMatlab/: WholeBodyFwdKinVizzy.m
vizzy_description/kinematic_description_matlab/: Rz.m  WholeBodyFwdKinVizzy.m  hand_display.m  realTimeVisAndInertialToEndEffectorRot.m  realTimeVisualization.m
vizzy_description/launch/: display-whithout-collisions.launch  display.launch  display_right_hand.launch
vizzy_description/meshes/: B_W.dae  F_W.dae  Front.dae  Left.dae  M0L.dae  M1.dae  M1L.dae  M2.dae  M3L.dae  M3R.dae  M4.dae  M4L.dae  M5.dae  M5R.dae  M6L.dae  M6L_back.dae  M6L_wrist.dae  M6R.dae  M6R_back.dae  M7R.dae  Segway.dae  ego.blend  ego_sphere.dae  ego_sphere2.dae  untitled.blend  untitled.blend1
vizzy_description/plugins/: ros.gazebo.xacro  yarp.gazebo.xacro
vizzy_description/robots/: exp.urdf  vizzy-description.gv  vizzy-no-collisions.urdf.xacro  vizzy-with-collisions.urdf.xacro  vizzy.ros.urdf.xacro  vizzy.urdf.xacro  vizzy.yarp.urdf.xacro  vizzy_base_only.urdf.xacro  vizzy_hand_only.urdf.xacro  vizzy_head_only.urdf.xacro
vizzy_description/rviz/: right_hand_urdf.rviz  urdf.rviz
vizzy_description/urdf/: common.urdf.xacro
vizzy_gazebo/: CMakeLists.txt  README.md  database.config  package.xml
vizzy_gazebo/launch/: camera.launch  gazebo.launch  gmapping_gazebo.launch  upperbody.launch  vizzy_sim_world.launch  vizzy_sim_world_map_server.launch  vizzy_spawn.launch
vizzy_gazebo/maps/: vizzy_sim_world.yaml
vizzy_gazebo/pessoa1/: model.sdf
vizzy_gazebo/pessoa2/: model.sdf
vizzy_gazebo/pessoa3/: model.config  model.sdf
vizzy_gazebo/src/: mimic_plugin.cpp  vizzy_control_node.cpp
vizzy_gazebo/worlds/: 3boxes_room.world  7thmap_new.world  7thmap_new_2.world  attention.world  garching_kitchen.world  isr_7th_floor.world  isr_7th_floor_table_and_objects.world  isr_7th_floor_test.world  ninoW.world  tum_kitchen.world  vizzy_test_world.world
vizzy_launch/: CMakeLists.txt  package.xml
vizzy_launch/env-hooks/: env_loader.sh
vizzy_launch/launch/: mapa_piso7.yaml  vizzy_gazebo.launch  vizzy_real.launch  vizzy_real_and_speech.launch  vizzy_simulation.launch  vizzy_simulation_baseonly.launch  vizzy_simulation_nonfakelocalization.launch
vizzy_launch/rviz/: nav_eband.rviz  vizzy.rviz  vizzy_simulation.rviz  vizzy_simulation_nonfake.rviz
vizzy_msgs/: CMakeLists.txt  package.xml
vizzy_msgs/action/: Cartesian.action  Charge.action
vizzy_msgs/msg/: DslDataset.msg  KokamBatteryPower.msg  Tactile.msg
vizzy_msgs/srv/: ArmDown.srv  BatteryChargingState.srv  BatteryState.srv  MotorsShutdown.srv  ShutdownStartYarpRunProcess.srv
vizzy_navigation/: CMakeLists.txt  README.md  package.xml  push.sh
vizzy_navigation/action/: Charge.action
vizzy_navigation/cfg/: Avoidance.cfg  Docking.cfg  Mapless.cfg
vizzy_navigation/config/: docking_matcher.yaml  docking_model.yaml  reactive2d_config.ini
vizzy_navigation/coords/: coords-7th-floor-ISR.txt  coords-7th-floor-ISR_SIMULATION.txt  coords_civil.txt  rooms-7th-floor-ISR_SIMULATION.txt
vizzy_navigation/falkolib/: info.xml
vizzy_navigation/include/: charging_action_server.hpp  docking_controller.hpp  docking_controller_ros.hpp  docking_estimator.hpp  docking_learner.hpp  falko_database.hpp  pattern_pose_estimation.hpp
vizzy_navigation/launch/: amcl.launch  amcl_simulation.launch  docking_action_server.launch  docking_estimator.launch  gmapping.launch  gmapping.launch~  mbf_navigation_local.launch  move_base_eband.launch  move_base_eband_remote.launch  navigation.launch  navigation_teb_local.launch  navigation_teb_remote.launch  rviz.launch  teleop_joy.launch  teleop_joy_simulation.launch  teleop_key.launch
vizzy_navigation/maps/: 8th.pgm  8th.yaml  atrioTorreNorte.yaml  atrio_TorreNorte2.yaml  atrio_TorreNorte2_obst.yaml  (+21 more)
vizzy_robot/: CMakeLists.txt  README.md  manifest.xml  package.xml
vizzy_sensors/: CMakeLists.txt  README  nodelet_plugins.xml  package.xml  vizzy_sensors_plugins.xml
vizzy_yarp_icub/: CMakeLists.txt
(+652 files in other folders)
