<package>
  <name>vizzy_gazebo</name>
  <version>1.11.4</version>
  <description>vizzy_gazebo</description>
  <author>Miguel Aragão</author>
  <maintainer email="miguelaragao91@gmail.com">Miguel Aragão</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
