<package>
  <name>vizzy_sensors</name>
  <version>1.0.0</version>
  <description>

    Contain the launch files for the hokuyo sensor
    and also the filters applied on the data before
    Vizzy using it.

  </description>
  
  <maintainer email="miguelaragao91@gmail.com">Miguel Aragão</maintainer>
  <author>Miguel Aragão</author>
  <author>Piyush Khandelwal</author>

  <license>BSD</license>

  <url type="website">https://github.com/vislab-tecnico-lisboa/vizzy/vizzy_sensors</url>
  <url type="bugtracker">https://github.com/vislab-tecnico-lisboa/vizzy/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>camera1394</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>freenect_launch</run_depend>
  <run_depend>hokuyo_node</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export>
    <filters plugin="${prefix}/vizzy_sensors_plugins.xml"/>
  </export>
</package>
