


project(vizzyYarpIcub)

add_subdirectory(yogaFiles)
add_subdirectory(demoGraspManager_Vizzy_ISR)
add_subdirectory(vizzyCartesianControllerServer)
add_subdirectory(vizzyCartesianControllerClient)
add_subdirectory(vizzyCartesianSolver)
add_subdirectory(vizzy_iKinGazeCtrl)
add_subdirectory(vizzyRobotMotorGui)
add_subdirectory(vizzyMotorRosInterface)
add_subdirectory(vizzyCamerasBridge)
add_subdirectory(vizzyFingerLimbControl)
