# Copyright: (C) 2015 Vislab Laboratory - Instituto de Sistemas e Robotica - Instituto Superior Tecnico
# Authors: Plinio Moreno
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(libraries)
add_subdirectory(examples)
# to be added in the future if necessary
#add_subdirectory(core)
#add_subdirectory(tools)
#add_subdirectory(simulators)
add_subdirectory(modules)
