# Copyright: (C) 2015 Vislab Laboratory - Instituto de Sistemas e Robotica - Instituto Superior Tecnico
# Authors: Plinio Moreno
# CopyPolicy: Released under the terms of the GNU GPL v2.0.


add_subdirectory(cartesianControllerClient)
add_subdirectory(testCartesianControllerServer)
add_subdirectory(iKinGaze_ROS_bridge)
add_subdirectory(tactileYarpRosBridge)


