# Copyright: (C) 2015 Vislab Laboratory - Instituto de Sistemas e Robotica - Instituto Superior Tecnico
# Authors: Plinio Moreno
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(demoGraspManager_Vizzy_ISR)
add_subdirectory(vizzy_iKinCtrlGaze)
add_subdirectory(vizzyCartesianControllerServer)
add_subdirectory(vizzyCartesianSolver)
add_subdirectory(yogaDemo)
add_subdirectory(cfwFailUtility)
add_subdirectory(jointStatePublishers)
add_subdirectory(motorInterfaceFromRos)
add_subdirectory(armGesture)
add_subdirectory(ros2yarpImageBridge)
add_subdirectory(fingerLimbsControl)
